# trellis

./: .gitignore  LICENSE  README.md  com.trellis.garden.plist  com.trellis.garden.plist.example  pyproject.toml  requirements.txt  run-garden.sh  trellis.py  trellis.toml  trellis.toml.example
.github/workflows/: tests.yml
docs/plans/: 2026-06-19-phase3-auto-moc.md  2026-07-19-note-triage.md
docs/specs/: 2026-06-19-auto-moc-detection-design.md  2026-07-19-note-triage-design.md
examples/: gardener-review-example.md
tests/: test_trellis.py
